# fastapi-mcp-docs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: app.py
src/fastapi_mcp_docs/: __init__.py  config_export.py  introspection.py  middleware.py  routes.py  schemas.py  ui.py
tests/: test_introspection.py  test_routes.py
